# real-time-data-engineering-demo

./: .env.example  .gitignore  Dockerfile.spark  LICENSE  README.md  docker-compose.yml  pyproject.toml
data/nyctaxi/delta/: .part-00000-23a0c3e3-82de-40f1-909b-b98d42e10a72-c000.snappy.parquet.crc  .part-00001-c5207ed9-5e32-4c37-b6f6-722befbfc520-c000.snappy.parquet.crc  .part-00002-56f08a0a-9de5-4734-bf56-436c712ce757-c000.snappy.parquet.crc  .part-00003-e98be1aa-22ea-4661-9dd0-9bd326e2e844-c000.snappy.parquet.crc
data/nyctaxi/delta/_delta_log/: .00000000000000000000.json.crc
notebooks/clickstream/: NB_consume_clickstream.ipynb
notebooks/nyctaxistream/: NB_consume_spark_nyctaxistream.ipynb  NB_demo_watermarking.ipynb  NB_demo_write_kafka_to_spark.ipynb  NB_generate_events.ipynb  NB_produce_kafka_nyctaxistream.ipynb  NB_startup.ipynb  NB_write_nyctaxi_raw_to_delta.ipynb
utils/: __init__.py  generate_data.py  generic.py  kafka.py  kafka_admin.py  spark.py  startup.py
